--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "ramda": "^0.23.0",
     "react": "15.4.2",
     "react-native": "0.42.3",
+    "react-native-modal-datetime-picker": "^4.1.0",
+    "react-navigation": "^1.0.0-beta.7",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "react-navigation": "^1.0.0-beta.7"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
