--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ramda": "^0.23.0",
     "react": "15.4.2",
     "react-native": "0.42.3",
+    "react-native-calendar": "^0.11.0",
     "react-native-elements": "^0.10.2",
     "react-native-modal-datetime-picker": "^4.1.0",
     "react-native-vector-icons": "^4.0.0",
